--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
                     <span>🎫</span>
                     <span>Pass on OpenSea</span>
                 </a>
-                <a href="https://dextools.io/" target="_blank" rel="noopener noreferrer" class="link-btn">
+                <a href="https://www.dextools.io/app/ether/pair-explorer/0x52bea360319c9e34c197ba9d6132a6f1db17a6a6" target="_blank" rel="noopener noreferrer" class="link-btn">
                     <span>📈</span>
                     <span>Trade LGND</span>
                 </a>
