--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                     <div style="margin-top: 1rem;">
                         <div class="tokenomics-item">
                             <span>LGND Token Contract</span>
-                            <span class="security-badge">Renounced Forever</span>
+                            <span class="security-badge">Renounced</span>
                         </div>
                         <div class="tokenomics-item">
                             <span>L3G3NDARY Pass Staking</span>
