--- a/index.html
+++ b/index.html
@@ -1061,28 +1061,28 @@
                 </div>
                 
                 <div class="tokenomics-card">
-                    <h3 style="margin-bottom: 1rem; color: var(--accent); display: flex; align-items: center; gap: 10px;">
-                        <span>⚡</span>
-                        <span>Phase 1: Strengthening the Foundation & Launch</span>
-                    </h3>
-                    <p style="color: #94A3B8; margin-bottom: 1rem; font-size: 0.9rem;">
-                        <em>Goal: Activate the project's economy, enhance transparency, and set the stage for growth.</em>
-                    </p>
-                    <div style="margin-top: 1rem;">
-                        <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
-                            <span>Launch of the Updated Web Portal</span>
-                            <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">IN PROGRESS</span>
-                        </div>
-                        <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
-                            <span>Priority NFT Sale (100 Pass + 200 L3G3NDS)</span>
-                            <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">COMING SOON</span>
-                        </div>
-                        <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
-                            <span>Liquidity Provision & Lock</span>
-                            <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">PLANNED</span>
-                        </div>
-                    </div>
-                </div>
+    <h3 style="margin-bottom: 1rem; color: var(--accent); display: flex; align-items: center; gap: 10px;">
+        <span>⚡</span>
+        <span>Phase 1: Strengthening the Foundation & Launch</span>
+    </h3>
+    <p style="color: #94A3B8; margin-bottom: 1rem; font-size: 0.9rem;">
+        <em>Goal: Activate the project's economy, enhance transparency, and set the stage for growth.</em>
+    </p>
+    <div style="margin-top: 1rem;">
+        <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
+            <span>Launch of the Updated Web Portal</span>
+            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">March 2026</span>
+        </div>
+        <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
+            <span>Priority NFT Sale (100 Pass + 200 L3G3NDS)</span>
+            <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">Start March 2026</span>
+        </div>
+        <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
+            <span>Liquidity Provision & Lock</span>
+            <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">March 2026</span>
+        </div>
+    </div>
+</div>
                 
                 <div class="tokenomics-card">
                     <h3 style="margin-bottom: 1rem; color: #10B981; display: flex; align-items: center; gap: 10px;">
@@ -1095,15 +1095,15 @@
                     <div style="margin-top: 1rem;">
                         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
                             <span>Marketing & Collaborations</span>
-                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">PLANNED</span>
+                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">April 2026</span>
                         </div>
                         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
                             <span>Active Member Program</span>
-                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">PLANNED</span>
+                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">April 2026</span>
                         </div>
                         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
                             <span>Expansion of NFT Utility</span>
-                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">PLANNED</span>
+                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">April 2026</span>
                         </div>
                     </div>
                 </div>
