--- a/index.html
+++ b/index.html
@@ -1071,11 +1071,11 @@
     <div style="margin-top: 1rem;">
         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
             <span>Launch of the Updated Web Portal</span>
-            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">March 2026</span>
+            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅ LIVE</span>
         </div>
         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
             <span>Priority NFT Sale (100 Pass + 200 L3G3NDS)</span>
-            <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">Start March 2026</span>
+            <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">March 2026</span>
         </div>
         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
             <span>Liquidity Provision & Lock</span>
