--- a/index.html
+++ b/index.html
@@ -1029,15 +1029,15 @@
                     <div style="margin-top: 1rem;">
                         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
                             <span>Native project token</span>
-                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅ LIVE</span>
+                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅</span>
                         </div>
                         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
                             <span>Two unique NFT collections</span>
-                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅ LIVE</span>
+                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅</span>
                         </div>
                         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
                             <span>Two functional staking contracts</span>
-                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅ LIVE</span>
+                            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅</span>
                         </div>
                     </div>
                     
@@ -1071,7 +1071,7 @@
     <div style="margin-top: 1rem;">
         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
             <span>Launch of the Updated Web Portal</span>
-            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅ LIVE</span>
+            <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅</span>
         </div>
         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
             <span>Priority NFT Sale (100 Pass + 200 L3G3NDS)</span>
