--- a/index.html
+++ b/index.html
@@ -597,18 +597,22 @@
             <h1>L3G3NDARY</h1>
             
             <div class="links">
-                <a href="https://opensea.io/collection/l3g3nds-317620434" target="_blank" rel="noopener noreferrer" class="link-btn">
-                    <span>🖼️</span>
-                    <span>L3G3NDS NFTs</span>
-                </a>
-                <a href="https://opensea.io/collection/l3g3ndary-pass" target="_blank" rel="noopener noreferrer" class="link-btn">
-                    <span>🎫</span>
-                    <span>L3G3NDARY Pass</span>
-                </a>
-                <button id="connectWalletBtn" class="btn btn-primary">
-                    🔗 Connect Wallet
-                </button>
-            </div>
+    <a href="https://opensea.io/collection/l3g3nds-317620434" target="_blank" rel="noopener noreferrer" class="link-btn">
+        <span>🖼️</span>
+        <span>L3G3NDS NFTs</span>
+    </a>
+    <a href="https://opensea.io/collection/l3g3ndary-pass" target="_blank" rel="noopener noreferrer" class="link-btn">
+        <span>🎫</span>
+        <span>L3G3NDARY Pass</span>
+    </a>
+    <a href="https://www.dextools.io/app/ether/pair-explorer/0x52bea360319c9e34c197ba9d6132a6f1db17a6a6" target="_blank" rel="noopener noreferrer" class="link-btn">
+        <span>📈</span>
+        <span>Trade LGND</span>
+    </a>
+    <button id="connectWalletBtn" class="btn btn-primary">
+        🔗 Connect Wallet
+    </button>
+</div>
         </section>
 
         <!-- Security & Transparency Section -->
@@ -1281,26 +1285,15 @@
         <section class="section">
             <h2 class="section-title">🌍 Join Our Community</h2>
             <div class="links">
-                <a href="https://x.com/l3g3ndary_dep" target="_blank" rel="noopener noreferrer" class="link-btn">
-                    <span class="x-icon">𝕏</span>
-                </a>
-                <a href="https://discord.gg/FXHpdqeqDr" target="_blank" rel="noopener noreferrer" class="link-btn">
-                    <span>💬</span>
-                    <span>Discord</span>
-                </a>
-                <a href="https://opensea.io/collection/l3g3nds-317620434" target="_blank" rel="noopener noreferrer" class="link-btn">
-                    <span>🖼️</span>
-                    <span>L3G3NDS on OpenSea</span>
-                </a>
-                <a href="https://opensea.io/collection/l3g3ndary-pass" target="_blank" rel="noopener noreferrer" class="link-btn">
-                    <span>🎫</span>
-                    <span>Pass on OpenSea</span>
-                </a>
-                <a href="https://www.dextools.io/app/ether/pair-explorer/0x52bea360319c9e34c197ba9d6132a6f1db17a6a6" target="_blank" rel="noopener noreferrer" class="link-btn">
-                    <span>📈</span>
-                    <span>Trade LGND</span>
-                </a>
-            </div>
+    <a href="https://x.com/l3g3ndary_dep" target="_blank" rel="noopener noreferrer" class="link-btn">
+        <span class="x-icon">𝕏</span>
+        <span>Twitter / X</span>
+    </a>
+    <a href="https://discord.gg/FXHpdqeqDr" target="_blank" rel="noopener noreferrer" class="link-btn">
+        <span>💬</span>
+        <span>Discord</span>
+    </a>
+</div>
         </section>
     </main>
 
