--- a/index.html
+++ b/index.html
@@ -1274,19 +1274,26 @@
         </section>
 
         <!-- Community Section -->
-        <section class="section">
-            <h2 class="section-title">🌍 Join Our Community</h2>
-            <div class="links">
-    <a href="https://x.com/l3g3ndary_dep" target="_blank" rel="noopener noreferrer" class="link-btn">
-        <span class="x-icon">𝕏</span>
-        <span>Twitter / X</span>
-    </a>
-    <a href="https://discord.gg/FXHpdqeqDr" target="_blank" rel="noopener noreferrer" class="link-btn">
-        <span>💬</span>
-        <span>Discord</span>
-    </a>
-</div>
-        </section>
+<section class="section">
+    <h2 class="section-title">🌍 Join Our Community</h2>
+    <div class="links">
+        <a href="https://x.com/l3g3ndary_dep" target="_blank" rel="noopener noreferrer" class="link-btn">
+            <span class="x-icon">𝕏</span>
+        </a>
+        <a href="https://discord.gg/FXHpdqeqDr" target="_blank" rel="noopener noreferrer" class="link-btn">
+            <span>💬</span>
+            <span>Discord</span>
+        </a>
+        <a href="https://www.linkedin.com/in/3g3ndary/" target="_blank" rel="noopener noreferrer" class="link-btn">
+            <span>💼</span>
+            <span>LinkedIn</span>
+        </a>
+        <a href="https://medium.com/@l3g3ndarydep" target="_blank" rel="noopener noreferrer" class="link-btn">
+            <span>📝</span>
+            <span>Medium</span>
+        </a>
+    </div>
+</section>
     </main>
 
     <!-- Footer -->
