--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                         </div>
                         <div class="tokenomics-item">
                             <span>Liquidity Pool</span>
-                            <span class="security-badge">LOCKED</span>
+                            <span class="security-badge">LOCKED/BURNED</span>
                         </div>
                     </div>
                 </div>
@@ -820,12 +820,12 @@
                     <div class="contract-label">
                         <span>💧</span>
                         <div>
-                            <div><strong>Liquidity Pool (LOCKED)</strong></div>
+                            <div><strong>Liquidity Pool (LOCKED/BURNED)</strong></div>
                             <div class="contract-address" onclick="copyToClipboard('0x52BEa360319c9e34c197BA9D6132a6f1DB17A6A6')">
                                 0x52BEa360319c9e34c197BA9D6132a6f1DB17A6A6
                             </div>
                             <div style="font-size: 0.9rem; color: #10B981; margin-top: 0.25rem;">
-                                LOCKED • 40M LGND + ETH
+                                LOCKED/BURNED • 40M LGND + ETH
                             </div>
                         </div>
                     </div>
