--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                             <span class="tokenomics-percentage">10% (100M)</span>
                         </div>
                         <div class="tokenomics-item">
-                            <span>Locked Tokens</span>
+                            <span>Locked Tokens RESERVED FOR LIQUIDITY ADDITIONS</span>
                             <span class="tokenomics-percentage">15% (150M)</span>
                         </div>
                         <div class="tokenomics-item">
@@ -1048,11 +1048,11 @@
                             <span class="security-badge" style="background: rgba(16, 185, 129, 0.2); color: #10B981;">✅</span>
                         </div>
                         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
-                            <span>Priority NFT Sale (100 Pass + 200 L3G3NDS)</span>
+                            <span>Priority NFT Sale (100 Pass + 200 L3G3NDS) 100% of NFT sales will be added to liquidity L3G3NDARY Coin</span>
                             <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">March 2026</span>
                         </div>
                         <div class="tokenomics-item" style="border-bottom: none; padding: 0.75rem 0;">
-                            <span>Liquidity Provision & Lock</span>
+                            <span>Liquidity Provision & Burn</span>
                             <span class="security-badge" style="background: rgba(245, 158, 11, 0.2); color: #F59E0B;">March 2026</span>
                         </div>
                     </div>
