--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-itunes-app" content="app-id=1578821947, app-argument=https://metamask.app.link/dapp/l3g3ndary.com">
     <meta name="google-play-app" content="app-id=io.metamask">
     
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛡️</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><circle cx=%2250%22 cy=%2250%22 r=%2240%22 fill=%22%23FFD700%22 stroke=%22%23B8860B%22 stroke-width=%223%22/><text x=%2250%22 y=%2265%22 font-size=%2260%22 text-anchor=%22middle%22 fill=%22%23B8860B%22 font-weight=%22bold%22>L</text></svg>">
     
     <!-- Ethers.js -->
     <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.0/dist/ethers.umd.min.js"></script>
@@ -592,9 +592,9 @@
     <header>
         <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
             <div class="logo">
-                <span>🛡️</span>
-                <span>L3G3NDARY</span>
-            </div>
+    <span style="display: inline-block; width: 40px; height: 40px; background: linear-gradient(135deg, #FFD700, #B8860B); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; color: #B8860B; text-shadow: 0 0 5px rgba(255,215,0,0.5); box-shadow: 0 2px 10px rgba(255,215,0,0.3);">L</span>
+    <span>L3G3NDARY</span>
+</div>
             <div id="networkInfo"></div>
         </div>
     </header>
