--- a/index.html
+++ b/index.html
@@ -588,10 +588,13 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
-            <div id="networkInfo"></div>
+    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+        <div class="logo">
+            <span>L3G3NDARY</span>
         </div>
-    </header>
+        <div id="networkInfo"></div>
+    </div>
+</header>
 
     <!-- Domain Verification with Security Warning -->
 <div class="domain-verification" style="flex-direction: column; align-items: center; gap: 12px;">
